# roughcut-stdio

./: .env  .env.example  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
docs/: ROADMAP.md  analyzer-pipeline.md  architecture.md  commands.md  configuration.md  desktop-distribution.md  documentation-update-state.json  manifesto.md  pipeline-improvements.md  research.md  setup.md
fixtures/: review-states-project.json  sample-project.json  segmentation-evaluation.json
openspec/: config.yaml
plan/: README.md
services/analyzer/: pyproject.toml
services/analyzer/app/: __init__.py  ai.py  analysis.py  benchmarking.py  clip.py  clip_dedup.py  deduplication.py  domain.py  fcpxml.py  main.py  media.py  prefilter.py  process_reporting.py  scoring.py  segmentation.py  segmentation_evaluation.py  semantic_validation.py  service.py  transcripts.py
services/analyzer/app/ai_runtime/: __init__.py  adapters.py  cache.py  config.py  evidence.py  normalize.py  prompts.py
services/analyzer/app/selection/: __init__.py  review.py  takes.py  timeline.py
services/analyzer/app/serialization/: __init__.py  project_data.py
services/analyzer/app/shared/: __init__.py  env.py  numbers.py  strings.py
services/analyzer/scripts/: bootstrap_clip.py  bootstrap_mlx_vlm.py  bootstrap_moondream.py  bootstrap_transcript.py  check_ai_provider.py  evaluate_segmentation.py  export_fcpxml.py  export_sample_fcpxml.py  resolve_project.py  scan_media_root.py  write_process_artifacts.py
services/analyzer/tests/: __init__.py  test_ai.py  test_analysis.py  test_architecture_modules.py  test_benchmarking.py  test_bootstrap_clip.py  test_clip.py  test_deduplication.py  test_fcpxml.py  test_media.py  test_prefilter.py  test_process_reporting.py  test_scan_media_root.py  test_scoring.py  test_segmentation_evaluation.py
(+333 files in other folders)
