[project]
name = "timeline-cutter-analyzer"
version = "0.1.0"
description = "Analysis and export core for Timeline Cutter."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.34.0,<1.0.0"
]
moondream = [
  "torch>=2.6.0,<3.0.0",
  "transformers>=4.50.0,<5.0.0",
  "pillow>=10.4.0,<12.0.0",
  "huggingface-hub>=0.30.0,<1.0.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
