[project]
name = "timeline-cutter-analyzer"
version = "0.1.0"
description = "Analysis and export core for Timeline Cutter."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.34.0,<1.0.0"
]
mlx_vlm = [
  "mlx>=0.30.4,<1.0.0",
  "mlx-vlm>=0.4.1,<1.0.0",
  "torch>=2.6.0,<3.0.0",
  "torchvision>=0.21.0,<1.0.0",
  "huggingface-hub>=0.36.0,<2.0.0",
  "pillow>=12.0.0,<13.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
