[package]
name = "roughcut-stdio-desktop"
version = "0.1.0"
description = "Desktop interface for Roughcut Stdio"
authors = ["OpenAI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-dialog = "2.4.0"
